xmerl: Start -spec convertion

--- a/lib/xmerl/doc/src/Makefile
+++ b/lib/xmerl/doc/src/Makefile
@@ -79,6 +79,8 @@ XML_FILES= \
 
 XML_GEN_FILES = $(XML_CHAPTER_GEN_FILES)
 
+TOP_SPECS_FILE = specs.xml
+
 # ----------------------------------------------------
 # Release Target
 # ----------------------------------------------------
