--- a/lib/erl_docgen/src/Makefile
+++ b/lib/erl_docgen/src/Makefile
@@ -39,7 +39,9 @@ MODULES = \
 	docgen_otp_specs \
 	docgen_edoc_xml_cb \
 	docgen_xmerl_xml_cb \
-	docgen_xml_to_chunk
+	docgen_xml_to_chunk \
+	eep48_to_markdown \
+	docgen_xml_to_markdown
 
 HRL_FILES = 
 
