--- a/lib/erl_docgen/src/Makefile
+++ b/lib/erl_docgen/src/Makefile
@@ -39,9 +39,7 @@ MODULES = \
 	docgen_otp_specs \
 	docgen_edoc_xml_cb \
 	docgen_xmerl_xml_cb \
-	docgen_xml_to_chunk \
-	eep48_to_markdown \
-	docgen_xml_to_markdown
+	docgen_xml_to_chunk
 
 HRL_FILES = 
 
